# fitness-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  auth_setup.py  claude_client.py  config.py  conftest.py  debrief.py  google_health_client.py  hevy_client.py  main.py  memory.py  pyproject.toml  requirements.txt  slack_client.py  template.yaml
.github/workflows/: deploy.yml
clients/: claude.py  google_health.py  hevy.py  slack.py
core/: memory.py  models.py
events/: scheduled.json  webhook_workout_created.json
tests/: test_biometrics.py  test_messages.py
