[project]
name = "fitsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "mangum>=0.17.0",
    "requests>=2.31.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0"
]
